--- a/app/src/main/res/layout/fragment_create_request.xml
+++ b/app/src/main/res/layout/fragment_create_request.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="4dp"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegisterActivity">
+    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".RegisterActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -51,15 +51,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Gender"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="Gender"/>
 
         <RadioGroup
+            android:id="@+id/rgpGender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="25dp"
-            android:id="@+id/rgpGender"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:paddingLeft="25dp">
 
             <RadioButton
                 android:layout_width="wrap_content"
@@ -94,20 +94,52 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:paddingTop="10dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
             android:text="Units Required "
-            android:layout_weight="1"/>
+            />
 
-        <SeekBar
+
+        <NumberPicker
+            android:id="@+id/numberPicker"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/skbUnitsRequired"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:max="10"/>
+            android:orientation="horizontal"
+             />
+
+        <CheckBox
+            android:id="@+id/chkHalfunits"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Half"
+            />
+
+<!--        <com.wefika.horizontalpicker.HorizontalPicker
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:picker="http://schemas.android.com/apk/res/com.wefika.horizontalpicker"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:textColor="@color/blue"
+            android:id="@+id/hp_units"
+            android:textSize="@dimen/hp_textsize"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="2"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            app:dividerSize="@dimen/itemPadding"
+            app:sideItems="1"
+            android:background="@drawable/response_number_textview"/>-->
 
     </LinearLayout>
 
@@ -122,6 +154,7 @@
             android:id="@+id/edt_date_of_donation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="false"
             android:hint="Donation Date"
             android:maxLines="1"
             android:singleLine="true" />
@@ -140,7 +173,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Mobile Number"
+            android:inputType="number"
             android:maxLines="1"
+
             android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
@@ -157,10 +192,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Alternate Number"
+            android:inputType="number"
             android:maxLines="1"
             android:singleLine="true" />
 
     </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/edtView_Reason"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView4"
+                android:paddingTop="10dp">
+
+                <EditText
+                    android:id="@+id/edt_Reason"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Reason"
+                    android:maxLines="1"
+                    android:singleLine="true"/>
+
+            </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -177,9 +230,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingLeft="10dp"
-            android:layout_weight="1">
+            android:paddingLeft="10dp">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/txtView_AddressLine1"
@@ -230,15 +283,15 @@
     </LinearLayout>
 
     <Button
-        style="?android:textAppearanceSmall"
         android:id="@+id/btnSubmitRequest"
+        style="?android:textAppearanceSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
-        android:textStyle="bold"
-        android:textColor="#ffffff"
         android:layout_marginTop="15dp"
-        android:background="@drawable/mybutton"/>
+        android:background="@drawable/mybutton"
+        android:text="Submit"
+        android:textColor="#ffffff"
+        android:textStyle="bold"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
