--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="accent">#E0E0E0</color>
     <color name="black">#000000</color>
     <color name="red1">#DB2927</color>
+    <color name="blue">#0000ff</color>
     <color name="white">#ffffff</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="black_87">#DE000000</color>
