Edit Request, Search Filters added

--- a/app/src/main/res/layout/fragment_create_request.xml
+++ b/app/src/main/res/layout/fragment_create_request.xml
@@ -62,12 +62,14 @@
             android:paddingLeft="25dp">
 
             <RadioButton
+                android:id="@+id/rbnMale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Male"
                 />
 
             <RadioButton
+                android:id="@+id/rbnFemale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Female"/>
