--- a/app/src/main/res/menu/menu_search_donor.xml
+++ b/app/src/main/res/menu/menu_search_donor.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_filter"
-        android:icon="@drawable/ic_filter_icon"
+        android:icon="@drawable/ic_filter_black_24dp"
         android:orderInCategory="100"
         android:title="@string/action_filter"
         app:showAsAction="ifRoom"/>
