--- a/app/src/main/res/layout/request_card_view.xml
+++ b/app/src/main/res/layout/request_card_view.xml
@@ -1,111 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v7.widget.CardView
+    <data>
+
+        <variable
+            name="bloodRequest"
+            type="com.auidbook.prototype.Model.BloodRequest" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:id="@+id/my_card_view"
-        app:cardUseCompatPadding="true"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="4dp"
-        card_view:contentPadding="10dp"
-        >
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            android:id="@+id/my_card_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-           >
-
-            <ImageView
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_gravity="center"
-                android:id="@+id/image_blood_group"
-                android:src="@drawable/ic_slide2"/>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/linear_vertical"
-                android:padding="3dp"
-                android:orientation="vertical"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15dp"
-                    android:textColor="@color/black"
-                    android:textColorHighlight="@color/black"
-                    android:id="@+id/txt_requester_name"
-                    android:text="Name"
-                    android:padding="3dp"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="15dp"
-                    android:textColor="@color/black"
-                    android:textColorHighlight="@color/black"
-                    android:id="@+id/txt_blood_unit"
-                    android:padding="3dp"
-                    android:text="3 Units Of Blood Needed" />
-                <!--<TextView
-                    android:text="Mobile Number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txt_phone_number"
-                    android:textColorHighlight="@color/colorPrimaryDark"/>-->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txt_hospital"
-                    android:text="Egmore GH"
-                    android:textColorHighlight="@color/colorPrimaryDark"
-                    android:padding="3dp"/>
-            </LinearLayout>
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:cardUseCompatPadding="true"
+            card_view:cardCornerRadius="4dp"
+            card_view:cardElevation="4dp"
+            card_view:contentPadding="10dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:orientation="horizontal"
-                android:padding="3dp">
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/btn_donate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="3dp"
-                    android:text="Donate" />
-
-                <TextView
-                    android:id="@+id/txt_response_number"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                <ImageView
+                    android:id="@+id/image_blood_group"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/response_number_textview"
-                    android:padding="4dp"
-                    android:textColor="#ffffff"
-                    android:visibility="gone"
-                    android:gravity="center"
-                    android:textColorHighlight="@color/colorPrimaryDark" />
+                    android:src="@drawable/ic_slide2" />
+
+                <LinearLayout
+                    android:id="@+id/linear_vertical"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="3dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            style="@style/BloodRequestLabel"
+                            android:text="@{String.valueOf((int)bloodRequest.numberOfUnits)}" />
+
+                        <TextView
+                            android:id="@+id/txt_blood_unit"
+                            style="@style/BloodRequestLabel"
+                            android:text="@{@plurals/unit((int)bloodRequest.numberOfUnits)}" />
+
+                        <TextView
+                            style="@style/BloodRequestLabel"
+                            android:text="@string/of" />
+
+                        <TextView
+                            style="@style/BloodRequestLabel"
+                            android:text="@{bloodRequest.bloodGroup.toString()}" />
+
+                        <TextView
+                            style="@style/BloodRequestLabel"
+                            android:text="@string/needed" />
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/txt_requester_name"
+                                android:layout_width="200sp"
+                                android:layout_height="wrap_content"
+                                android:ellipsize="end"
+                                android:padding="3dp"
+                                android:text="@{bloodRequest.patientName}"
+                                android:textColor="@color/black"
+                                android:textColorHighlight="@color/black"
+                                android:textSize="15sp"
+                                tools:text="Testing" />
+
+                            <TextView
+                                android:id="@+id/txt_hospital"
+                                android:layout_width="200sp"
+                                android:layout_height="wrap_content"
+                                android:ellipsize="end"
+                                android:padding="3dp"
+                                android:text="@{bloodRequest.hospitalName}"
+                                android:textColorHighlight="@color/colorPrimaryDark" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_gravity="center"
+                            android:orientation="horizontal"
+                            android:padding="3dp">
+
+                            <Button
+                                android:id="@+id/btn_donate"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="3dp"
+                                android:text="@string/donate" />
+
+                            <TextView
+                                android:id="@+id/txt_response_number"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_gravity="center"
+                                android:background="@drawable/response_number_textview"
+                                android:gravity="center"
+                                android:padding="4dp"
+                                android:textColor="#ffffff"
+                                android:textColorHighlight="@color/colorPrimaryDark"
+                                android:visibility="gone" />
+                        </LinearLayout>
+
+                    </RelativeLayout>
+                </LinearLayout>
+
+
             </LinearLayout>
 
 
-        </LinearLayout>
+        </android.support.v7.widget.CardView>
 
-
-    </android.support.v7.widget.CardView>
-
-</LinearLayout>
+    </LinearLayout>
+</layout>
