User can create a donation request and view pending request

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,8 +35,8 @@
             android:paddingEnd="0dp"
             app:ms_enableFloatingLabel="true"
             app:ms_floatingLabelColor="?android:attr/textColorHint"
-            app:ms_floatingLabelText="Blood group"
-            app:ms_hint="Blood group"
+            app:ms_floatingLabelText="@string/blood_group"
+            app:ms_hint="@string/blood_group"
             app:ms_alignLabels="false"
             app:ms_hintColor="?android:attr/textColorHint"
             app:ms_multiline="false" />
